# SupplyDrift

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ThirdPartyNotices.txt  ci.sh  docker-compose.yml  e2e-cli.sh  requirements.txt
github-shadow-deps/: .github-inventory.yml  .gitignore  README.md  gbom_sync.py  pyproject.toml  requirements-ai.in  requirements-ai.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  scan.py  sync.example.yaml
github-shadow-deps/deploy/: runner.Dockerfile
github-shadow-deps/scripts/: regression.sh
github-shadow-deps/tests/: conftest.py  test_ai_analyzer.py  test_cli_config.py  test_discovery.py  test_engine.py  test_enrichment.py  test_malware_cli.py  test_path_containment.py  test_redaction.py  test_repo_loader_token.py  test_runner_auth.py  test_runner_serve.py  test_sanitizer.py  test_sync_child_env.py  test_sync_config.py  test_sync_connector.py  test_sync_local.py  test_sync_mapper.py  test_sync_sbom_merge.py  test_sync_stream_push.py
image-scanner/: .gitignore  README.md  config.example.yaml  image_scan.py  k8s_scan.py  pyproject.toml  requirements.in  requirements.txt
image-scanner/deploy/: README.md  k8s-cronjob.yaml  runner.Dockerfile
image-scanner/docs/: AUTHENTICATION.md  k8s-cartographer.md
image-scanner/tests/: conftest.py  test_auth.py  test_auth_index.py  test_aws_auth.py  test_child_env.py  test_config_url.py  test_dockerhub.py  test_ecr.py  test_ecs.py  test_eks.py  test_ghcr.py  test_harbor.py  test_k8s_analyzer.py  test_k8s_end_to_end.py  (+14 more)
supplydrift-sandbox/: README.md  pyproject.toml
(+219 files in other folders)
