[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supplydrift-sandbox"
version = "0.1.0"
description = "Internal least-privilege process runner for SupplyDrift scanners"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
